--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run"
+		"test": "npm run test:unit -- --run",
+		"db:migrate": "bun run src/lib/db/scripts/migrate.ts",
+		"db:seed": "bun run src/lib/db/scripts/seed.ts",
+		"db:reset": "bun run src/lib/db/scripts/reset.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -24,6 +27,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.14",
+		"@types/bun": "^1.3.2",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.4",
 		"bun-types": "^1.3.2",
@@ -47,6 +51,8 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.553.0"
+		"@lucide/svelte": "^0.553.0",
+		"@tanstack/svelte-virtual": "^3.13.12",
+		"shiki": "^3.15.0"
 	}
 }
