--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "bun -b vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -26,6 +26,7 @@
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.4",
+		"bun-types": "^1.3.2",
 		"daisyui": "^5.4.7",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
