--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.553.0",
 		"@tanstack/svelte-virtual": "^3.13.12",
+		"fuzzysort": "^3.1.0",
 		"highlight.js": "^11.11.1",
 		"shiki": "^3.15.0"
 	}
