--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"dev": "bun -b vite dev",
+		"serve": "bun run src/main.ts",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
@@ -20,42 +18,41 @@
 		"db:reset": "bun run src/lib/db/scripts/reset.ts"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.38.0",
-		"@sveltejs/adapter-node": "^5.4.0",
-		"@sveltejs/kit": "^2.47.1",
+		"@eslint/compat": "^1.4.1",
+		"@eslint/js": "^9.39.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.14",
-		"@types/bun": "^1.3.2",
-		"@types/node": "^22",
+		"@tailwindcss/vite": "^4.1.17",
+		"@types/bun": "^1.3.4",
+		"@types/node": "^22.19.2",
 		"@vitest/browser": "^3.2.4",
-		"bun-types": "^1.3.2",
-		"daisyui": "^5.4.7",
-		"eslint": "^9.38.0",
+		"bun-types": "^1.3.4",
+		"daisyui": "^5.5.11",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
-		"globals": "^16.4.0",
-		"playwright": "^1.56.1",
-		"prettier": "^3.6.2",
+		"eslint-plugin-svelte": "^3.13.1",
+		"globals": "^16.5.0",
+		"playwright": "^1.57.0",
+		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.1",
-		"svelte": "^5.41.0",
-		"svelte-check": "^4.3.3",
-		"tailwindcss": "^4.1.14",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"svelte": "^5.45.8",
+		"svelte-check": "^4.3.4",
+		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
-		"vite": "^7.1.10",
+		"typescript-eslint": "^8.49.0",
+		"vite": "^7.2.7",
 		"vite-plugin-devtools-json": "^1.0.0",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.553.0",
-		"@tanstack/svelte-virtual": "^3.13.12",
+		"@tanstack/svelte-virtual": "^3.13.13",
+		"elysia": "^1.4.18",
 		"fuzzysort": "^3.1.0",
 		"highlight.js": "^11.11.1",
-		"shiki": "^3.15.0"
+		"shiki": "^3.19.0"
 	}
 }
