--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run",
-		"db:migrate": "bun run src/lib/db/scripts/migrate.ts",
-		"db:seed": "bun run src/lib/db/scripts/seed.ts",
-		"db:reset": "bun run src/lib/db/scripts/reset.ts"
+		"db:migrate": "bun run src/lib/server/migrations/migrator.ts",
+		"db:make:migration": "bun run src/lib/server/migrations/generator.ts",
+		"db:fresh": "bun run src/lib/server/migrations/fresh.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
