--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ghostwire",
+	"name": "agrus",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -15,6 +15,7 @@
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run",
+		"tfc": "rm storage/logs/tests.log && npm run test:unit -- --run  2>&1 | tee storage/logs/tests.log",
 		"db:migrate": "bun run src/lib/server/migrations/migrator.ts",
 		"db:make:migration": "bun run src/lib/server/migrations/generator.ts",
 		"db:fresh": "bun run src/lib/server/migrations/fresh.ts"
@@ -51,6 +52,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.553.0",
 		"@tanstack/svelte-virtual": "^3.13.13",
+		"@types/bun": "^1.3.5",
 		"fuzzysort": "^3.1.0",
 		"shiki": "^3.20.0"
 	}
